syntax = "proto3";

package study.protobuf;

import "scalapb/scalapb.proto";
import "google/protobuf/wrappers.proto";
import "study/protobuf/metadata.proto";

message MemberCreated {
    option (scalapb.message).extends = "study.EventMessage";
    ProgramMembershipData       program_membership_data = 1;
    MemberData                  member_data             = 2;
    CardData                    card_data               = 3;
}

message ProgramMembershipData {
    google.protobuf.StringValue membership_id       = 1;
    google.protobuf.StringValue member_id           = 2;
    google.protobuf.StringValue program_id          = 3;
    google.protobuf.StringValue program_name        = 4;
    google.protobuf.StringValue member_number       = 5;
    google.protobuf.StringValue membership_status   = 6;
}

message MemberData {
    google.protobuf.StringValue member_id                   = 1;
    google.protobuf.StringValue user_id                     = 2;
    google.protobuf.StringValue partner_number              = 3;
    google.protobuf.StringValue first_name                  = 4;
    google.protobuf.StringValue last_name                   = 5;
    google.protobuf.StringValue birth_month                 = 6;
    google.protobuf.StringValue birth_day                   = 7;
    google.protobuf.StringValue country_code                = 8;
    google.protobuf.StringValue member_created_date         = 9;
    google.protobuf.StringValue member_updated_date         = 10;
    //study.protobuf.metadata.ZonedTimestamp card_holder_since_date    = 11;
}


message CardData {
    google.protobuf.StringValue card_id                 = 1;
    ZonedTimestamp card_created_on_date    = 2;
    ZonedTimestamp card_changed_on_date    = 3;
    google.protobuf.StringValue svc_number              = 4;
    ZonedTimestamp registration_date       = 5;
    google.protobuf.StringValue card_class              = 6;
    google.protobuf.StringValue promo_code              = 7;
    google.protobuf.StringValue status                  = 8;
}