syntax = "proto3";

package study.protobuf;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "scalapb/scalapb.proto";

message Metadata {
    google.protobuf.StringValue correlation_id  = 1;
    google.protobuf.StringValue tenant_id       = 2;
    map<string, string>         headers         = 3;
}

message ZonedTimestamp {
    google.protobuf.Timestamp   timestamp   = 1;
    google.protobuf.StringValue zone_id     = 2;
}